# iwouldargue

./: README.md
k8s/: config.yaml  ingress.yaml  namespace.yaml  secret.yaml
k8s/app/: gateway.yaml  media-service.yaml  metadata-service.yaml  notification-service.yaml
k8s/infra/: cassandra.yaml  livekit.yaml  redis.yaml
services/gateway/: Dockerfile  build.gradle
services/gateway/src/main/java/org/iwouldargue/gateway/: GatewayApplication.java  GatewayConfig.java  JwtConfig.java  JwtFilter.java  SecurityConfig.java
services/gateway/src/main/resources/: application.yaml
services/gateway/src/test/java/org/iwouldargue/gateway/: GatewayApplicationTests.java
services/media-service/: Cargo.toml  Dockerfile
services/media-service/src/: dtos.rs  lib.rs  main.rs  state.rs  utils.rs
services/media-service/src/handlers/: discussions.rs  mod.rs  tokens.rs
services/metadata-service/: Dockerfile  build.gradle  settings.gradle
services/metadata-service/src/main/java/org/iwouldargue/: ErrorHandler.java  FileService.java  IwouldargueApplication.java
services/metadata-service/src/main/java/org/iwouldargue/attachment/: Attachment.java  AttachmentController.java  AttachmentRepository.java  AttachmentSender.java
services/metadata-service/src/main/java/org/iwouldargue/attendee/: Attendee.java  (+2 more)
services/metadata-service/src/main/resources/: application.yaml
services/metadata-service/src/test/java/org/iwouldargue/: IwouldargueApplicationTests.java
services/notification-service/: Cargo.toml  Dockerfile
services/notification-service/src/: main.rs
(+21 files in other folders)
