[package]
name = "media-service"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.8"
bytes = "1.11.0"
dotenvy = "0.15.7"
futures = "0.3.31"
livekit = "0.7.29"
livekit-api = "0.4.12"
livekit-protocol = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = { version = "1.20.0", features = ["v4", "serde"] }

[[bin]]
name = "media-service"
path = "src/main.rs"
