[package]
name = "notification-service"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.8"
dotenvy = "0.15.7"
futures-util = "0.3.31"
redis = { version = "1.0.2", features = ["json", "sentinel", "tokio-comp"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[[bin]]
name = "notification-service"
path = "src/main.rs"
